--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,10 @@
-EMAIL_HOST=smtp-relay.brevo.com
-EMAIL_HOST_USER=12@smtp-brevo.com
-EMAIL_HOST_PASSWORD=password
-SECRET_KEY=asecretkey
+SECRET_KEY=django-insecure-kite-project-key-998877
+DEBUG=True
+ALLOWED_HOSTS=127.0.0.1,localhost
+
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER=rahulgupta002076@gmail.com
+EMAIL_HOST_PASSWORD=srou acpz orkw hgys
