--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,27 @@
-.env
-venv
-.history/
+# Python
 __pycache__/
-.vscode/
-*.sqlite3
+*.py[cod]
+*$py.class
+
+# Django
+*.log
+local_settings.py
+db.sqlite3
 media/
+
+# Environment variables
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDEs
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
