--- a/.env.sample
+++ b/.env.sample
@@ -6,5 +6,5 @@ EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=rahulgupta002076@gmail.com
-EMAIL_HOST_PASSWORD=srou acpz orkw hgys
+EMAIL_HOST_USER=your_email@gmail.com
+EMAIL_HOST_PASSWORD=paste_your_16_char_app_password_here
